--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <label for="phone">Phone</label>
     <input type="tel" id="phone" name="phone" placeholder="your phone" (optional)>
     <label for="message">Message</label>
-    <textarea id="message" name="message" rows="10"></testarea>
+    <textarea id="message" name="message" rows="10"></textarea>
     <input type="submit" value="send">
   </form>
 
